--- a/.github/workflows/manual-release.yml
+++ b/.github/workflows/manual-release.yml
@@ -21,11 +21,11 @@ jobs:
     
     - name: Prepare bootloader
       run: |
-        mkdir -p tmp && cd tmp && \
+        gitbash.exe -c "mkdir -p tmp && cd tmp && \
         curl --location --remote-name https://github.com/pyinstaller/pyinstaller/releases/download/v4.3/pyinstaller-4.3.tar.gz && \
         tar xfz pyinstaller-4.3.tar.gz && \
         cd pyinstaller-4.3/bootloader && \
-        python ./waf all
+        python ./waf all"
 
 
     - name: Build pyinstaller
