--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -17,6 +17,9 @@ include CHANGELOG.rst
 include CONTRIBUTING.rst
 include LICENSE
 include README.rst
+include .gitchangelog.rc
+include newRelease.sh
+include requirements.txt
 
 
 global-exclude *.py[cod] __pycache__/* *.so *.dylib
