--- a/tox.ini
+++ b/tox.ini
@@ -3,16 +3,16 @@ envlist =
     clean,
     check,
     docs,
-    py36-cover,
-    py36-nocov,
-    py37-cover,
-    py37-nocov,
-    py38-cover,
-    py38-nocov,
+    # py36-cover,
+    # py36-nocov,
+    # py37-cover,
+    # py37-nocov,
+    # py38-cover,
+    # py38-nocov,
     py39-cover,
     py39-nocov,
-    pypy3-cover,
-    pypy3-nocov,
+    # pypy3-cover,
+    # pypy3-nocov,
     report
 
 [testenv]
