--- a/.travis.yml
+++ b/.travis.yml
@@ -39,10 +39,10 @@ matrix:
     - env:
         - TOXENV=py39-nocov
       python: '3.9'
-    - env:
-        - TOXENV=pypy3-cover
-        - TOXPYTHON=pypy3
-      python: 'pypy3'
+    # - env:
+    #     - TOXENV=pypy3-cover
+    #     - TOXPYTHON=pypy3
+    #   python: 'pypy3'
     # - env:
     #     - TOXENV=pypy3-nocov
     #     - TOXPYTHON=pypy3
