chg: dev: reduced tox env, added winbinary

--- a/tox.ini
+++ b/tox.ini
@@ -13,11 +13,12 @@ envlist =
     py39-nocov,
     # pypy3-cover,
     # pypy3-nocov,
-    report
+    report,
+    winbinary
 
 [testenv]
 basepython =
-    {bootstrap,clean,check,report,docs}: {env:TOXPYTHON:python3}
+    {bootstrap,clean,check,report,docs,winbinary}: {env:TOXPYTHON:python3}
 setenv =
     PYTHONPATH={toxinidir}/tests
     PYTHONUNBUFFERED=yes
@@ -26,6 +27,7 @@ passenv =
 deps =
     pytest
     pytest-travis-fold
+    -rrequirements.txt
 commands =
     {posargs:pytest -vv --ignore=src}
 
@@ -49,10 +51,8 @@ skip_install = true
 commands =
     python setup.py check --strict --metadata --restructuredtext
     check-manifest {toxinidir}
-    # why the hell is there is default config which scans ALL files?
-    # deactivated until better understanding if it is worthful to cope with this tools.
-    # flake8
-    # isort --verbose --check-only --diff --filter-files .
+    #flake8 {toxinidir}/src
+    isort --verbose --check-only --diff --filter-files {toxinidir}/src
 
 
 [testenv:docs]
@@ -146,3 +146,12 @@ deps =
 
 [testenv:pypy3-nocov]
 basepython = {env:TOXPYTHON:pypy3}
+
+[testenv:winbinary]
+commands =
+    # pip install -e .
+    pyinstaller --clean --noconfirm -F src/playground/__main__.py --name playground
+skip_install = false
+deps =
+    {[testenv]deps}
+    pyinstaller
