--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -20,6 +20,7 @@ include README.rst
 include .gitchangelog.rc
 include newRelease.sh
 include requirements.txt
+include requirements_dev.txt
 
 
 global-exclude *.py[cod] __pycache__/* *.so *.dylib
