--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,7 +34,7 @@ jobs:
         cd pyinstaller-4.5.1/bootloader && \
         python ./waf all && \
         cd $CURDIR
-        cd tmp && python setup.py install
+        cd tmp/pyinstaller-4.5.1 && python setup.py install
 
 
     - name: Build pyinstaller
