--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,7 +35,7 @@ jobs:
         cd pyinstaller-4.5.1/bootloader && \
         python ./waf all && \
         cd $CURDIR
-        cd tmp/pyinstaller-4.5.1 && python setup.py install
+        #cd tmp/pyinstaller-4.5.1 && python setup.py install
 
 
     - name: Build pyinstaller
