chg: github: prepare pyinstaller

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,9 +33,9 @@ jobs:
         curl --location --remote-name https://github.com/pyinstaller/pyinstaller/archive/refs/tags/v4.5.1.tar.gz && \
         tar xfz v4.5.1.tar.gz && \
         cd pyinstaller-4.5.1/bootloader && \
-        python ./waf all && \
+        python ./waf all --target-arch=64bit && \
         cd $CURDIR
-        #cd tmp/pyinstaller-4.5.1 && python setup.py install
+        cd tmp/pyinstaller-4.5.1 && python setup.py install
 
 
     - name: Build pyinstaller
