--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,7 +18,7 @@ jobs:
       uses: actions/setup-python@v2
     - name: Install dependencies
       run: |
-        pip install -r requirements_dev.txt
+        pip install -r requirements.txt
 
 
 
