--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -56,6 +56,25 @@ jobs:
         release_name: Release ${{ github.ref }}
         draft: false
         prerelease: false
+
+    - name: Prepare release asset
+      run: |
+        mkdir -p assets && \
+        cp ./dist/playground.exe assets && \
+        cp ./README.rst assets
+    
+    - name: Create zip
+      uses: papeloto/action-zip@v1^
+      with:
+        files: assets/
+        dest: ${{ github.workspace }}/playground.zip
+        recursive: false
+    
+    - uses: actions/upload-artifact@v1
+      with:
+        name: my-artifact
+        path: ${{ github.workspace }}/playground.zip
+
     - name: Upload Release Asset
       id: upload-release-asset
       uses: actions/upload-release-asset@v1
@@ -63,6 +82,6 @@ jobs:
        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps
-        asset_path: ./dist/playground.exe
-        asset_name: playground.exe
-        asset_content_type: application/vnd.microsoft.portable-executable
+        asset_path: ${{ github.workspace }}/playground.zip
+        asset_name: playground.zip
+        asset_content_type: application/zip
